--- a/src/styles/global/pages/index.scss
+++ b/src/styles/global/pages/index.scss
@@ -15,4 +15,6 @@
 @import "_pics.scss";
 @import "_user.scss";
 @import "_create-ad.scss";
+@import "_payment.scss";
+@import "_messages.scss";
 @import "_mobile.scss";
