--- a/public/global/picstagraph-web/css/index.css
+++ b/public/global/picstagraph-web/css/index.css
@@ -3230,6 +3230,22 @@ header .cms-logo {
     border: 0px;
     padding-left: 25px; }
 
+.cms-middle-section .inputfile {
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1; }
+  .cms-middle-section .inputfile + label {
+    background-color: rgba(190, 190, 190, 0.35);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
+    text-align: center;
+    height: 40px;
+    padding-top: 10px; }
+
 .panel-heading a:before {
   background: url(../images/down-arrow.png);
   content: "";
