static HTML for verification, feedback and reported content Pages of CMS

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -43,6 +43,9 @@ body {
 .padding-left-10 {
   padding-left: 10px;
 }
+.margin-bottom-50 {
+  margin-bottom: 50px;
+}
 .size-20 {
   font-size: 20px;
 }
