--- a/src/styles/global/cms/_cms.scss
+++ b/src/styles/global/cms/_cms.scss
@@ -111,6 +111,35 @@ header {
       padding-top: 10px;
     }
   }
+  .capcha-wrapper {
+    display: inline-block;
+    width: auto;
+    margin-right: 20px;
+    .capcha-img {
+      width: auto;
+      position: static;
+      height: 40px;
+    }
+  }
+  .button_wrapper {
+    width: auto;
+    button {
+      height: 40px;
+    }
+  }
+  input {
+    padding: 10px;
+  }
+  .full-width-textarea {
+    width: 100%;
+    height: 180px;
+    resize: none;
+    outline: none;
+    padding: 10px;
+    &:focus {
+      border: 1px solid #000;
+    }
+  }
 }
 .panel-heading a:before {
   background: url(../images/down-arrow.png);
