--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -46,6 +46,9 @@ body {
 .margin-bottom-50 {
   margin-bottom: 50px;
 }
+.margin-top-25 {
+  margin-top: 25px;
+}
 .size-20 {
   font-size: 20px;
 }
