--- a/src/styles/global/pages/_about.scss
+++ b/src/styles/global/pages/_about.scss
@@ -83,6 +83,7 @@
         .social-title {
           width: 44%;
           display: inline-block;
+          padding-left: 5px;
           @media (max-width: 991px) {
             width: 85%;
           }
