--- a/src/styles/global/pages/index.scss
+++ b/src/styles/global/pages/index.scss
@@ -17,4 +17,5 @@
 @import "_create-ad.scss";
 @import "_payment.scss";
 @import "_messages.scss";
+@import "_backoffice.scss";
 @import "_mobile.scss";
