implemented the owner menu and routes for it and create static component for that

--- a/src/styles/global/pages/_login.scss
+++ b/src/styles/global/pages/_login.scss
@@ -1,3 +1,11 @@
+.login-height {
+  height: 100vh;
+}
+
+.register-height {
+  height: 155vh;
+}
+
 .login-process {
   background: $white_color;
   @include float;
