--- a/src/styles/global/pages/_backoffice.scss
+++ b/src/styles/global/pages/_backoffice.scss
@@ -65,3 +65,42 @@
     }
   }
 }
+.processed-popup {
+  z-index: 9999999;
+  .modal-dialog {
+    top: 32%;
+    .processed-options {
+      background: #fff;
+      padding: 10px;
+      text-align: center;
+      span {
+        padding: 8px 12px;
+        border: 2px solid #cdcdcd;
+        display: inline-block;
+        &:first-child {
+          margin-right: 15px;
+        }
+        img {
+          width: 12px;
+        }
+      }
+    }
+  }
+}
+.backoffice-status {
+  background: $white_color;
+  display: flex;
+  .status-wrapper {
+    flex: 1;
+  }
+}
+.backoffice-pics {
+  .name-wrapper {
+    @include gradient();
+    margin-bottom: 0px;
+    color: $white_color;
+  }
+  .backoffice-status {
+    border: 0px;
+  }
+}
