--- a/src/styles/global/layout/_header.scss
+++ b/src/styles/global/layout/_header.scss
@@ -68,6 +68,7 @@ header {
       .dropdown-menu {
         right: 0 !important;
         left: auto !important;
+        padding: 0;
       }
       li {
         &.open {
@@ -165,6 +166,36 @@ header {
           left: initial;
           top: 60px;
           border: 0;
+          .nav-tabs {
+            display: flex;
+            li {
+              flex: 1;
+              a {
+                outline: none;
+                padding: 12px;
+                border-bottom: 3px solid #ededed;
+                margin: 0;
+                .tab-title {
+                  margin: 0;
+                }
+              }
+              &.active {
+                a {
+                  font-family: "Helvetica-Bold";
+                }
+              }
+              &:nth-child(2) {
+                a {
+                  border-right: 3px solid #ededed;
+                }
+              }
+              &:nth-child(1) {
+                a {
+                  border-right: 3px solid #ededed;
+                }
+              }
+            }
+          }
           nav {
             .nav {
               border: 0px;
