--- a/src/styles/global/pages/_backoffice.scss
+++ b/src/styles/global/pages/_backoffice.scss
@@ -67,8 +67,16 @@
 }
 .processed-popup {
   z-index: 9999999;
+  width: 100%;
+  background: rgba(190, 190, 190, 0.5);
   .modal-dialog {
     top: 32%;
+    width: 300px;
+    .modal-normal-title {
+      border-bottom: 3px solid rgba(198, 198, 198, 0.3);
+      background: #ffffff;
+      margin-bottom: 0px;
+    }
     .processed-options {
       background: #fff;
       padding: 10px;
@@ -83,6 +91,26 @@
         img {
           width: 12px;
         }
+      }
+    }
+  }
+}
+.post-popup {
+  z-index: 9999999;
+  width: 100%;
+  background: rgba(190, 190, 190, 0.5);
+  .modal-dialog {
+    top: 32%;
+    width: 300px;
+    .post-action-links {
+      a {
+        display: block;
+        background: $white_color;
+        color: $charcoal_color;
+        padding: 10px 40px;
+        text-align: center;
+        margin-bottom: 2px;
+        font-size: 12px;
       }
     }
   }
@@ -102,5 +130,63 @@
   }
   .backoffice-status {
     border: 0px;
+  }
+}
+.backoffice-user {
+  .name-wrapper {
+    margin-bottom: 0px;
+  }
+  .backoffice-status {
+    border-color: rgba(198, 198, 198, 0.3);
+  }
+}
+.dashboard-middle-section {
+  .normal_title {
+    padding: 10px;
+    margin-bottom: 10px;
+    background: $white_color;
+  }
+  .review-report-btns {
+    button {
+      width: 49%;
+    }
+  }
+}
+.title_with_dropdown {
+  margin-bottom: 10px;
+  background: #fff;
+  margin-top: 10px;
+  float: left;
+  width: 100%;
+  font-family: "Helvetica-Bold";
+  font-size: 12px;
+  span {
+    display: inline-block;
+    padding: 10px;
+  }
+  select {
+    float: right;
+    height: 40px;
+    width: 150px;
+    font-family: "Helvetica";
+  }
+}
+.dashboard-tbl {
+  table {
+    background: $white_color;
+    width: 100%;
+    font-size: 12px;
+    color: $charcoal_color;
+    tr {
+      td {
+        border: 1px solid $charcoal_color;
+        padding: 20px;
+      }
+      th {
+        border: 1px solid $charcoal_color;
+        padding: 20px;
+        font-family: "Helvetica-Bold";
+      }
+    }
   }
 }
