--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -442,7 +442,7 @@
         p {
           color: $charcoal_color;
           font-size: 14px;
-          padding-left: 68px;
+          padding-left: 60px;
           @media (max-width: 991px) {
             padding-left: 0px;
           }
@@ -466,4 +466,10 @@
       }
     }
   }
+}
+.tick {
+  display: inline-block;
+  position: relative;
+  top: -3px;
+  padding: 0px 5px;
 }
