--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -31,6 +31,13 @@
         border: 1px solid $silver_color;
       }
     }
+    .right-side-close {
+      position: absolute;
+      right: -40px;
+      top: -25px;
+      background: transparent;
+      border: 0;
+    }
     .box {
       background-color: #e9e9e9;
       padding: 12.25rem 1.25rem;
