--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -28,6 +28,10 @@ body {
 .no-padding-right {
   padding-right: 0px;
 }
+.padding-lr-5 {
+  padding-left: 5px;
+  padding-right: 5px;
+}
 .padding-10 {
   padding: 10px;
 }
@@ -395,4 +399,7 @@ hr {
 .billing-add {
   height: 600px;
   overflow: auto;
+}
+.mar-btm-5 {
+  margin-bottom: 5px;
 }
